--- a/Exercises/Hashing/HashChapterSumm.html
+++ b/Exercises/Hashing/HashChapterSumm.html
@@ -10,8 +10,7 @@
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
-
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="HashFuncSumm" ></div>
   <div class="exercise" data-name="HashFuncPROSumm" ></div>
   <div class="exercise" data-name="HashAnalSumm" ></div>
