--- a/Exercises/List/ListOverhead.html
+++ b/Exercises/List/ListOverhead.html
@@ -7,9 +7,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
-
+<body data-height="650" data-width="950">
   <script>
     function genAnswer(p, d) {
       var sum = p + d;
