--- a/Exercises/List/StckQSumm.html
+++ b/Exercises/List/StckQSumm.html
@@ -6,8 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="StckQMCQqacss"></div>
   <div class="exercise" data-name="StckQMCQqchrct"></div>
   <div class="exercise" data-name="StckQMCQqdq"></div>
@@ -18,7 +17,7 @@
   <div class="exercise" data-name="StckQMCQqrmv"></div>
   <div class="exercise" data-name="StckQMCQstckab"></div>
   <div class="exercise" data-name="StckQMCQstckacss"></div>
-  <div class="exercise" data-name="StckQMCQstckchrct"></div> 
+  <div class="exercise" data-name="StckQMCQstckchrct"></div>
   <div class="exercise" data-name="StckQMCQstckoprtns"></div>
   <div class="exercise" data-name="StckQMCQstckpp"></div>
   <div class="exercise" data-name="StckQMCQstckpsh"></div>
