--- a/Exercises/Sorting/MergesortSumm.html
+++ b/Exercises/Sorting/MergesortSumm.html
@@ -6,18 +6,17 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
-  <div class="exercise" data-name="MergesortMCQ1" ></div>  
-  <div class="exercise" data-name="MergesortMCQ4" ></div>  
-  <div class="exercise" data-name="MergesortMCQ6" ></div>	  
-  <div class="exercise" data-name="MergesortMCQcomplex" ></div>	  
-  <div class="exercise" data-name="MergesortMCQcomps" ></div>	  
-  <div class="exercise" data-name="MergesortMCQcost" ></div>	  
-  <div class="exercise" data-name="MergesortMCQequal" ></div>	  
-  <div class="exercise" data-name="MergesortTFstable" ></div>	  
-  <div class="exercise" data-name="MergesortMCQworst" ></div>	  
-  <div class="exercise" data-name="MergeImplTF1" ></div>  
-  <div class="exercise" data-name="MergeImplMCQ2" ></div>  
+<body data-height="650" data-width="950">
+  <div class="exercise" data-name="MergesortMCQ1" ></div>
+  <div class="exercise" data-name="MergesortMCQ4" ></div>
+  <div class="exercise" data-name="MergesortMCQ6" ></div>
+  <div class="exercise" data-name="MergesortMCQcomplex" ></div>
+  <div class="exercise" data-name="MergesortMCQcomps" ></div>
+  <div class="exercise" data-name="MergesortMCQcost" ></div>
+  <div class="exercise" data-name="MergesortMCQequal" ></div>
+  <div class="exercise" data-name="MergesortTFstable" ></div>
+  <div class="exercise" data-name="MergesortMCQworst" ></div>
+  <div class="exercise" data-name="MergeImplTF1" ></div>
+  <div class="exercise" data-name="MergeImplMCQ2" ></div>
 </body>
 </html>
