--- a/Exercises/Sorting/QuicksortPivotPRO.html
+++ b/Exercises/Sorting/QuicksortPivotPRO.html
@@ -5,7 +5,7 @@ Written by Gayathri Subramanian, Daniel Breakiron, and Cliff Shaffer
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Quicksort Find Pivot Element</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
@@ -14,9 +14,8 @@ Written by Gayathri Subramanian, Daniel Breakiron, and Cliff Shaffer
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
-<head>
-
-<body>
+</head>
+<body data-height="525" data-width="950">
 <script>
 "use strict";
 var arr, selIndex = -1;
@@ -69,6 +68,7 @@ var checkAnswer = function (length) {
           displayed below.The left pointer is at index 0 and the right
           pointer is at index <var>arr_size - 1</var>
           <div id="jsav" class="jsavcanvas"></div>
+        </p>
       </div>
       <div class="solution" data-type="custom">
         <div class="guess">[selIndex !== -1]</div>
