--- a/Exercises/Sorting/QuicksortSumm.html
+++ b/Exercises/Sorting/QuicksortSumm.html
@@ -6,14 +6,13 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
-  <div class="exercise" data-name="QuicksortMCQcosta"></div>  
-  <div class="exercise" data-name="QuicksortMCQcostb"></div>  
-  <div class="exercise" data-name="QuicksortMCQcomps"></div>  
+<body data-height="650" data-width="950">
+  <div class="exercise" data-name="QuicksortMCQcosta"></div>
+  <div class="exercise" data-name="QuicksortMCQcostb"></div>
+  <div class="exercise" data-name="QuicksortMCQcomps"></div>
   <div class="exercise" data-name="QuicksortMCQdisadvantage"></div>
-  <div class="exercise" data-name="QuicksortMCQpartit"></div>  
-  <div class="exercise" data-name="QuicksortMCQfraction"></div>  
+  <div class="exercise" data-name="QuicksortMCQpartit"></div>
+  <div class="exercise" data-name="QuicksortMCQfraction"></div>
   <div class="exercise" data-name="QuicksortMCQpcost"></div>
   <div class="exercise" data-name="QuicksortMCQcomplex"></div>
   <div class="exercise" data-name="QuicksortMCQequal"></div>
