--- a/Exercises/Sorting/SelsortSumm.html
+++ b/Exercises/Sorting/SelsortSumm.html
@@ -6,12 +6,12 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="SelsortMCQ1"></div>
   <div class="exercise" data-name="SelsortFIB2"></div>
   <div class="exercise" data-name="SelsortTF6"></div>
   <div class="exercise" data-name="SelsortMCQcomplex"></div>
-  <div class="exercise" data-name="SelsortMCQcomps"></div>  
+  <div class="exercise" data-name="SelsortMCQcomps"></div>
   <div class="exercise" data-name="SelsortMCQcost"></div>
   <div class="exercise" data-name="SelsortMCQsorted"></div>
   <div class="exercise" data-name="SelsortTFstable"></div>
