--- a/Exercises/Sorting/ShellsortSeries.html
+++ b/Exercises/Sorting/ShellsortSeries.html
@@ -6,8 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
+<body data-height="525" data-width="950">
 <script>
 // Determine whether a proposed series is legal or not
 function getAnswer(series) {
