--- a/Exercises/Sorting/SortAlgCompSumm.html
+++ b/Exercises/Sorting/SortAlgCompSumm.html
@@ -6,18 +6,17 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
-  <div class="exercise" data-name="SortAlgCompMCQ1" ></div>  
-  <div class="exercise" data-name="SortAlgCompMCQ4" ></div>  
-  <div class="exercise" data-name="SortAlgCompMCQ5" ></div>  
+<body data-height="650" data-width="950">
+  <div class="exercise" data-name="SortAlgCompMCQ1" ></div>
+  <div class="exercise" data-name="SortAlgCompMCQ4" ></div>
+  <div class="exercise" data-name="SortAlgCompMCQ5" ></div>
   <div class="exercise" data-name="SortAlgCompMCQ6" ></div>
   <div class="exercise" data-name="SortAlgCompMCQ7" ></div>
-  <div class="exercise" data-name="SortAlgCompMCQ8" ></div>  
-  <div class="exercise" data-name="SortAlgCompMCQ9" ></div>  
+  <div class="exercise" data-name="SortAlgCompMCQ8" ></div>
+  <div class="exercise" data-name="SortAlgCompMCQ9" ></div>
   <div class="exercise" data-name="SortAlgCompMCQ10"></div>
   <div class="exercise" data-name="SortAlgCompMCQ10a"></div>
-  <div class="exercise" data-name="SortAlgCompMCQ11"></div>  	  
-  <div class="exercise" data-name="SortAlgCompTF13"></div>  	  
+  <div class="exercise" data-name="SortAlgCompMCQ11"></div>
+  <div class="exercise" data-name="SortAlgCompTF13"></div>
 </body>
 </html>
