--- a/Exercises/Background/MthBgSumm.html
+++ b/Exercises/Background/MthBgSumm.html
@@ -6,8 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
 <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="MthBgMCQperm"></div>
   <div class="exercise" data-name="MthBgMCQdskacc"></div>
   <div class="exercise" data-name="MthBgMCQrmacc"></div>
