--- a/Exercises/Background/StTFprtlordr.html
+++ b/Exercises/Background/StTFprtlordr.html
@@ -4,17 +4,16 @@
   <title>Partial Ordering</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
+<body data-height="650" data-width="950">
 <div class="exercise">
   <div class="vars">
     <var id="CHOICESINDEX">randRange(0,5)</var>
     <var id="CHOICES">["isFatherOf on the set of people",
                        "isAncestorOf on the set of people",
                        "isOlderThan on the set of people",
-                       "isSisterOf on the set of people",                       
+                       "isSisterOf on the set of people",
                        "{&lt; 2,1 &gt;, &lt; 1,3 &gt;, &lt; 2,3 &gt;} on the set {1,2,3}",
                        "{&lt; a,b &gt;, &lt; a,a &gt;, &lt; b,a &gt;} on the set {a,b}"]
     </var>
@@ -23,17 +22,17 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Does the following relation define a
-        partial ordering on the indicated set? 
+        partial ordering on the indicated set?</p>
       <p class="question"><var>CHOICES[CHOICESINDEX]</var></p>
       <div class="solution"><var>ANSWER[CHOICESINDEX]</var></div>
       <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+        <li><var>"True"</var></li>
+        <li><var>"False"</var></li>
       </ul>
       <div class="hints">
         <p> A relation is a partial ordering if it is antisymmetric
         and transitive.</p>
-	<p> Is the relation antisymmetric on the set? That is, for
+        <p> Is the relation antisymmetric on the set? That is, for
           any two elements A and B of the set, if (A, B) is in the
           relation, then (B, A) is NOT in the relation?</p>
         <p> Is the relation transitive on the set? That is, for any
