--- a/Exercises/Binary/HeapSumm.html
+++ b/Exercises/Binary/HeapSumm.html
@@ -6,7 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="BSTdMCQ"></div>
   <div class="exercise" data-name="BSTbinTF"></div>
   <div class="exercise" data-name="HfeatureMCQ"></div>
