--- a/Exercises/Hashing/HashDelSumm.html
+++ b/Exercises/Hashing/HashDelSumm.html
@@ -6,7 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="HashDelMCQ1"></div>
   <div class="exercise" data-name="HashDelMCQ2"></div>
   <div class="exercise" data-name="HashDelTF3"></div>
