--- a/Exercises/Hashing/HashFuncPROSumm.html
+++ b/Exercises/Hashing/HashFuncPROSumm.html
@@ -6,7 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="HashFuncMod"></div>
   <div class="exercise" data-name="HashFuncBin"></div>
   <div class="exercise" data-name="HashFuncMid"></div>
