--- a/Exercises/Hashing/HashFuncSumm.html
+++ b/Exercises/Hashing/HashFuncSumm.html
@@ -6,7 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="HashMCQcollision"></div>
   <div class="exercise" data-name="HashMCQhashdef"></div>
   <div class="exercise" data-name="HashMCQtablesize"></div>
