--- a/Exercises/Hashing/HashingLinearProbePRO.html
+++ b/Exercises/Hashing/HashingLinearProbePRO.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Hashing Linear Probing Proficiency Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
@@ -18,8 +18,7 @@
     #reset { margin-right: 20px;}
   </style>
 </head>
-
-<body>
+<body data-height="650" data-width="950">
 <script>
 var
   jsav,           // The JSAV object
@@ -82,8 +81,8 @@ var checkAnswer = function() {
 };
 </script>
 
-<div class="exercise">
-<div class="vars">                
+  <div class="exercise">
+    <div class="vars">
       <var id="hashFunction">"h(k) = k  mod " + arr_size</var>
       <var id="JSAV">initJSAV()</var>
     </div>
@@ -93,12 +92,12 @@ var checkAnswer = function() {
           Given the following hash table, use hash
           function <var>hashFunction</var> and handle collisions
           using Linear Probing.
-        </p>          
-        <p class="question"> 
+        </p>
+        <p class="question">
           In which slot should the record with key
           value <var>currentKey </var> be inserted?
         </p>
-        <input id="reset" type="button" value="Reset" />  
+        <input id="reset" type="button" value="Reset" />
         <div id="jsav"></div>
       <div class="solution" data-type="custom">
         <div class="guess">
@@ -114,10 +113,10 @@ var checkAnswer = function() {
       <div class="hints">
         <p>Linear probing is the simple one.</p>
         <p>First use the hash function to computer the home slot.</p>
-	<p>If there is a collsion, then just step to the right by one
-	  step at a time until an empty slot is found.</p>
-	<p>If we reach the end of the array, then cycle around to the
-	  beginning.</p>
+        <p>If there is a collsion, then just step to the right by one
+          step at a time until an empty slot is found.</p>
+        <p>If we reach the end of the array, then cycle around to the
+          beginning.</p>
       </div>
     </div>
   </div>
