--- a/Exercises/Hashing/HashingQuadraticProbePRO.html
+++ b/Exercises/Hashing/HashingQuadraticProbePRO.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Hashing Quadratic Probing Proficiency Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
@@ -18,8 +18,7 @@
     #reset { margin-right: 20px;}
   </style>
 </head>
-
-<body>
+<body data-height="700" data-width="950">
 <script>
 var
   jsav,           // The JSAV object
@@ -88,7 +87,7 @@ var checkAnswer = function() {
 </script>
 
 <div class="exercise">
-    <div class="vars">                
+    <div class="vars">
       <var id="hashFunction">"h(k) = k  mod " + arr_size</var>
       <var id="JSAV">initJSAV()</var>
     </div>
@@ -97,13 +96,13 @@ var checkAnswer = function() {
         <p class="problem">
           Given the following hash table, use hash
           function <var>hashFunction </var> and handle collisions
-          using Quadratic Probing with probe function p(K, i) = i*i. 
-        </p>          
-        <p class="question"> 
+          using Quadratic Probing with probe function p(K, i) = i*i.
+        </p>
+        <p class="question">
           In which slot should the record with key
           value <var>currentKey </var> be inserted?
         </p>
-        <input id="reset" type="button" value="Reset" />  
+        <input id="reset" type="button" value="Reset" />
         <div id="jsav"></div>
       <div class="solution" data-type="custom">
         <div class="guess">
@@ -118,12 +117,12 @@ var checkAnswer = function() {
       </div>
       <div class="hints">
         <p>First use the hash function to computer the home slot.</p>
-	<p>If there is a collision, then the <code>i</code>'th place
-	  to look is <code>i*i</code> steps from the home slot.</p>
-	<p>Remember that offsets are always with respect to the home
-	  slot, not from the last slot probed to.</p>
-	<p>If we reach the end of the array while stepping, then cycle
-	  around to the beginning.</p>
+        <p>If there is a collision, then the <code>i</code>'th place
+          to look is <code>i*i</code> steps from the home slot.</p>
+        <p>Remember that offsets are always with respect to the home
+          slot, not from the last slot probed to.</p>
+        <p>If we reach the end of the array while stepping, then cycle
+          around to the beginning.</p>
       </div>
     </div>
   </div>
