--- a/Exercises/List/ArryLstSumm.html
+++ b/Exercises/List/ArryLstSumm.html
@@ -6,7 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="ArryLstMCQdelarb"></div>
   <div class="exercise" data-name="ArryLstMCQdelcurr"></div>
   <div class="exercise" data-name="ArryLstMCQinsarb"></div>
