--- a/Exercises/List/LstChptrSumm.html
+++ b/Exercises/List/LstChptrSumm.html
@@ -6,12 +6,12 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="LstChptrMCQdsbckfrnt"></div>
   <div class="exercise" data-name="LstChptrMCQdsenqdq"></div>
   <div class="exercise" data-name="LstChptrMCQdsfifo"></div>
-  <div class="exercise" data-name="LstChptrMCQdsinsdl"></div> 
-  <div class="exercise" data-name="LstChptrMCQdslifo"></div>  
+  <div class="exercise" data-name="LstChptrMCQdsinsdl"></div>
+  <div class="exercise" data-name="LstChptrMCQdslifo"></div>
   <div class="exercise" data-name="LstChptrMCQdsntlnr"></div>
   <div class="exercise" data-name="LstChptrMCQdsntlnr2"></div>
   <div class="exercise" data-name="LstChptrMCQdspshpp"></div>
