--- a/Exercises/List/LstLnkdSumm.html
+++ b/Exercises/List/LstLnkdSumm.html
@@ -6,7 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="LstLnkdMCQaccs"></div>
   <div class="exercise" data-name="LstLnkdMCQadv"></div>
   <div class="exercise" data-name="LstLnkdMCQchngcrsr"></div>
