--- a/Exercises/Sorting/HeapsortSumm.html
+++ b/Exercises/Sorting/HeapsortSumm.html
@@ -6,14 +6,13 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
-  <div class="exercise" data-name="HeapsortMCQ3" ></div>  
-  <div class="exercise" data-name="HeapsortMCQcomplex" ></div>  
-  <div class="exercise" data-name="HeapsortMCQcomps" ></div>  
-  <div class="exercise" data-name="HeapsortMCQcost" ></div>  
+<body data-height="650" data-width="950">
+  <div class="exercise" data-name="HeapsortMCQ3" ></div>
+  <div class="exercise" data-name="HeapsortMCQcomplex" ></div>
+  <div class="exercise" data-name="HeapsortMCQcomps" ></div>
+  <div class="exercise" data-name="HeapsortMCQcost" ></div>
   <div class="exercise" data-name="HeapsortMCQequal" ></div>
-  <div class="exercise" data-name="HeapsortMCQspace" ></div>  
-  <div class="exercise" data-name="HeapsortTFstable" ></div>  
+  <div class="exercise" data-name="HeapsortMCQspace" ></div>
+  <div class="exercise" data-name="HeapsortTFstable" ></div>
 </body>
 </html>
