--- a/Exercises/Sorting/InssortSumm.html
+++ b/Exercises/Sorting/InssortSumm.html
@@ -6,12 +6,12 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="InssortMCQcomplex"></div>
   <div class="exercise" data-name="InssortMCQ12"></div>
   <div class="exercise" data-name="InssortMCQ4"></div>
   <div class="exercise" data-name="InssortMCQ5"></div>
-  <div class="exercise" data-name="InssortMCQcomps"></div>  
+  <div class="exercise" data-name="InssortMCQcomps"></div>
   <div class="exercise" data-name="InssortMCQcosta"></div>
   <div class="exercise" data-name="InssortMCQcostb"></div>
   <div class="exercise" data-name="InssortMCQequal"></div>
