--- a/Exercises/Sorting/MergesortMergePRO.html
+++ b/Exercises/Sorting/MergesortMergePRO.html
@@ -6,7 +6,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Mergesort Merge Step Proficiency Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
@@ -29,8 +29,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
     .jsavcanvas { height: 190px;}
   </style>
 </head>
-
-<body>
+<body data-height="650" data-width="960">
 <script>
 var
   jsav,           // The JSAV object
@@ -137,7 +136,7 @@ var initJSAV = function (a) {
   // Set up handler for reset button
   $("#reset").click(function () { f_reset(); });
 };
-	
+
 // Check user's answer for correctness: User's array must match answer
 function checkAnswer(arr_size) {
   var i;
@@ -158,26 +157,26 @@ function checkAnswer(arr_size) {
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <div class="question">
-	<p>Merge the two subarrays below into the larger array. To
-        move a value in a subarray, click on it (it will then be
-        highlighted in yellow), and then click on the proper position
-        in the array above.</p>
+        <p>Merge the two subarrays below into the larger array. To
+          move a value in a subarray, click on it (it will then be
+          highlighted in yellow), and then click on the proper position
+          in the array above.</p>
         <input id="reset" type="button" value="Reset" />
-	<div id="jsav" class="jsavcanvas"></div>
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
-	<div class="guess">
+        <div class="guess">
           [userInput]
         </div>
-	<div class="validator-function">
+        <div class="validator-function">
           if (!checkAnswer(arr_size) && !guess[0])
           return ""; // User did not click, and correct answer is not
-	             // initial array state
+               // initial array state
           else return checkAnswer(arr_size);
-	</div>
+        </div>
       </div>
       <div class="hints">
-	<p> Merging the sorted subarrays results in a sorted final array </p>
+        <p> Merging the sorted subarrays results in a sorted final array </p>
       </div>
     </div>
   </div>
