--- a/Exercises/Sorting/RadixSortSumm.html
+++ b/Exercises/Sorting/RadixSortSumm.html
@@ -6,19 +6,18 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
-  <div class="exercise" data-name="BinsortTF1" ></div>  
+<body data-height="650" data-width="950">
+  <div class="exercise" data-name="BinsortTF1" ></div>
   <div class="exercise" data-name="BinsortMCQ2" ></div>
-  <div class="exercise" data-name="BinsortMCQ4" ></div>  
-  <div class="exercise" data-name="BinsortMCQ5" ></div>  
-  <div class="exercise" data-name="BinsortMCQcomps"></div>  
-  <div class="exercise" data-name="RadixSortTF1" ></div>  
+  <div class="exercise" data-name="BinsortMCQ4" ></div>
+  <div class="exercise" data-name="BinsortMCQ5" ></div>
+  <div class="exercise" data-name="BinsortMCQcomps"></div>
+  <div class="exercise" data-name="RadixSortTF1" ></div>
   <div class="exercise" data-name="RadixSortMCQ2" ></div>
-  <div class="exercise" data-name="RadixSortTF3" ></div>  
-  <div class="exercise" data-name="RadixSortMCQ4" ></div>  
-  <div class="exercise" data-name="RadixSortMCQ5" ></div>  
-  <div class="exercise" data-name="RadixSortTFbin" ></div>  
-  <div class="exercise" data-name="RadixSortMCQcomps" ></div>  
+  <div class="exercise" data-name="RadixSortTF3" ></div>
+  <div class="exercise" data-name="RadixSortMCQ4" ></div>
+  <div class="exercise" data-name="RadixSortMCQ5" ></div>
+  <div class="exercise" data-name="RadixSortTFbin" ></div>
+  <div class="exercise" data-name="RadixSortMCQcomps" ></div>
 </body>
 </html>
