--- a/Exercises/Sorting/RadixsortPRO.html
+++ b/Exercises/Sorting/RadixsortPRO.html
@@ -6,7 +6,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Radix Sort Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
@@ -30,8 +30,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
     }
   </style>
 </head>
-
-<body>
+<body data-height="860" data-width="950">
 <script>
 "use strict";
 var
@@ -136,7 +135,7 @@ var initJSAV = function (asize, qchoice) {
     }
   }
 };
-	
+
 // Check user's answer for correctness
 function checkAnswer(arr_size) {
   var i, j;
@@ -150,7 +149,7 @@ function checkAnswer(arr_size) {
   }
   //console.log("curr is " + curr + ", arr_size is " + arr_size);
   if (curr !== arr_size) { return false; }
-  
+
   return true;
 }
 </script>
@@ -165,30 +164,30 @@ function checkAnswer(arr_size) {
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <div class="question">
-	<p>Move each record on the left to the appropriate bin on the
+        <p>Move each record on the left to the appropriate bin on the
           right based on the <b><var>msgArray[qchoice]</var></b> digit.</p>
         <input id="reset" type="button" value="Reset" />
-	<div id="jsav" class="jsavcanvas"></div>
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
-	<div class="guess">
+        <div class="guess">
           [userInput]
         </div>
-	<div class="validator-function">
+        <div class="validator-function">
           if (!checkAnswer(arr_size) && !guess[0])
           return ""; // User did not click, and correct answer is not
-	             // initial array state
+               // initial array state
           else return checkAnswer(arr_size);
-	</div>
+        </div>
       </div>
       <div class="hints">
-	<p>Just take each record on the left one at a time and move it
-	to the proper bin on the right.</p>
-	<p> These are logically 3-digit numbers. If the value happens
+        <p>Just take each record on the left one at a time and move it
+          to the proper bin on the right.</p>
+        <p> These are logically 3-digit numbers. If the value happens
           to be less than 100, then you should think of the
           missing digits as being 0.</p>
-	<p>Be sure that you are looking at the correct digit that the
-	question asks for.</p>
+        <p>Be sure that you are looking at the correct digit that the
+          question asks for.</p>
       </div>
     </div>
   </div>
