--- a/Exercises/Sorting/ShellsortSublist.html
+++ b/Exercises/Sorting/ShellsortSublist.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>ShellSort Sublist Exercises</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
@@ -14,10 +14,8 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
 </head>
-
-<body>
-  <div class="exercise" data-name="ShellsortFindsub" data-weight="2"></div>  
-  <div class="exercise" data-name="ShellsortSortsub" data-weight="2"></div>  
+<body data-height="525" data-width="950">
+  <div class="exercise" data-name="ShellsortFindsub" data-weight="2"></div>
+  <div class="exercise" data-name="ShellsortSortsub" data-weight="2"></div>
 </body>
-
 </html>
