--- a/Exercises/Sorting/ShellsortSumm.html
+++ b/Exercises/Sorting/ShellsortSumm.html
@@ -6,13 +6,12 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
-<body>
-  <div class="exercise" data-name="ShellsortMCQ1" ></div>  
+<body data-height="685" data-width="950">
+  <div class="exercise" data-name="ShellsortMCQ1" ></div>
   <div class="exercise" data-name="ShellsortMCQ2" ></div>
-  <div class="exercise" data-name="ShellsortMCQ3" ></div>  
-  <div class="exercise" data-name="ShellsortMCQ4" ></div>  
-  <div class="exercise" data-name="ShellsortMCQ5" ></div>  
+  <div class="exercise" data-name="ShellsortMCQ3" ></div>
+  <div class="exercise" data-name="ShellsortMCQ4" ></div>
+  <div class="exercise" data-name="ShellsortMCQ5" ></div>
   <div class="exercise" data-name="ShellsortMCQ6" ></div>
   <div class="exercise" data-name="ShellsortMCQskip" ></div>
   <div class="exercise" data-name="ShellsortTFincr" ></div>
