--- a/Exercises/Sorting/SortBoundSumm.html
+++ b/Exercises/Sorting/SortBoundSumm.html
@@ -6,7 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="SortBoundMCQ1"></div>
   <div class="exercise" data-name="SortBoundMCQ2"></div>
   <div class="exercise" data-name="SortBoundMCQ3"></div>
