--- a/Exercises/Sorting/SortIntroSumm.html
+++ b/Exercises/Sorting/SortIntroSumm.html
@@ -6,7 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="SortIntroMCQ1"></div>
   <div class="exercise" data-name="SortIntroMCQ2"></div>
   <div class="exercise" data-name="SortIntroMCQ3a"></div>
