Finish 2-3+ tree delete slideshow and refactor code

--- a/AV/Development/TTPlusTree.html
+++ b/AV/Development/TTPlusTree.html
@@ -11,7 +11,7 @@
 <body>
 <!-- 52 B, 46 X, 33 D, 22 J, 71 M, 65 S-->
 
-<div id="tree">
+<div id="tree" class="jsavcontainer">
   <a class="jsavsettings"></a>
   <div class="jsavcounter"></div>
   <div class="jsavcontrols"></div>
@@ -19,7 +19,15 @@
   <div class="jsavcanvas"></div>
 </div>
 
-<div id="find">
+<div id="find" class="jsavcontainer">
+  <a class="jsavsettings"></a>
+  <div class="jsavcounter"></div>
+  <div class="jsavcontrols"></div>
+  <div class="jsavoutput jsavline"></div>
+  <div class="jsavcanvas"></div>
+</div>
+
+<div id="delete" class="jsavcontainer">
   <a class="jsavsettings"></a>
   <div class="jsavcounter"></div>
   <div class="jsavcontrols"></div>
