Fix problem in hashing exercise

--- a/Exercises/Hashing/HashChapterSumm.html
+++ b/Exercises/Hashing/HashChapterSumm.html
@@ -14,6 +14,10 @@
   <div class="exercise" data-name="HashFuncSumm" ></div>
   <div class="exercise" data-name="HashFuncPROSumm" ></div>
   <div class="exercise" data-name="HashAnalSumm" ></div>
-  <div class="exercise" data-name="HashDelSumm" ></div>
+  <div class="exercise" data-name="HashDelMCQ1"></div>
+  <div class="exercise" data-name="HashDelMCQ2"></div>
+  <div class="exercise" data-name="HashDelTF3"></div>
+  <div class="exercise" data-name="HashDelTF4"></div>
+  <div class="exercise" data-name="HashDelTF5"></div>
 </body>
 </html>
