Initial work on fixing BufferPoolAV

--- a/AV/Sorting/insertionsortAV.html
+++ b/AV/Sorting/insertionsortAV.html
@@ -21,7 +21,7 @@
       <td class="headerLeft"></td>
       <td class="headerCenter avTitle"></td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" />
+        <input id="about" type="button" name="about" />
         <a id="settings" class="jsavsettings" href="#"></a>
       </td>
     </tr>
