Fix up sorting summary exercise

--- a/Exercises/Sorting/MergeImplMCQ2.html
+++ b/Exercises/Sorting/MergeImplMCQ2.html
@@ -11,7 +11,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">The array imlementation for Mergesort uses
+      <p class="question">The array implementation for Mergesort uses
         how many arrays?
       <div class="solution"><var>"2"</var></div>
       <ul class="choices" >
