--- a/Exercises/Sorting/QuicksortPivotPRO.html
+++ b/Exercises/Sorting/QuicksortPivotPRO.html
@@ -10,6 +10,7 @@ Written by Gayathri Subramanian, Daniel Breakiron, and Cliff Shaffer
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
+  <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
@@ -17,7 +18,6 @@ Written by Gayathri Subramanian, Daniel Breakiron, and Cliff Shaffer
 </head>
 <body data-height="525" data-width="950">
 <script>
-"use strict";
 var arr, selIndex = -1;
 
 // function to handle a click event on an array
