--- a/RST/_themes/haiku/layout.html
+++ b/RST/_themes/haiku/layout.html
@@ -100,6 +100,7 @@
   <form method="post" class="report" action="https://#">
     <fieldset class="textbox">
       <div id="bug_error" class="error"></div>
+      <label>
         <span>{{ summary }}*:</span>
         <input type="text" id="b_title" placeholder="{{ summary }}" />
       </label>
