--- a/Exercises/Sorting/InssortPRO.html
+++ b/Exercises/Sorting/InssortPRO.html
@@ -1,6 +1,6 @@
 <!--
-Insertion Sort mini-proficiency exercise.
-Written by Gayathri Subramanian and Cliff Shaffer
+  Insertion Sort mini-proficiency exercise.
+  Written by Gayathri Subramanian and Cliff Shaffer.
 -->
 
 <!DOCTYPE html>
